# fitonduty-dashboard-march

./: .env.example  .gitignore  Dockerfile  GPS_INTEGRATION_SUMMARY.md  README.md  app.py  main.py  process_data.sh  pyproject.toml  run_tests.py
ansible/: README.md
ansible/inventory/: example.yml
ansible/playbooks/: connectivity.yml  march_database.yml
ansible/vars/: vault-example.yml
ansible/vars/testing/: vault.yml
assets/: custom-theme.css
callbacks/: navigation_callbacks.py
components/: auth.py
components/march/: march_overview.py  participant_detail.py  role_based_overview.py
config/: settings.py
config/seed-data/: example_participants.csv  example_seed.yml
database/: README.md  create_database.py  create_database_wrapper.py  create_schema.py  create_schema_wrapper.py  schema.sql  seed_database.py  seed_database_wrapper.py
database/migrations/: 001_add_core_temp.sql
deployment/: README.md
deployment/ansible/: README.md
deployment/ansible/inventory/: example.yml
docs/: README.md  guide-loading-data.md  guide-march-events.md  guide-participants.md  process_step_data.md  reference-gps.md  reference-scripts.md  setup-database.md  troubleshooting.md
scripts/: README.md  README_GPS_ROUTES.md  add_participants.py  generate_march_seed.py  load_march_data.py  merge_march_data.py  process_step_data.py  process_temp_data.py  process_watch_data.py
scripts/data/: export_to_parquet.py  fill_non_watch_data.py  load_march_data.py  merge_march_data.py  process_step_data.py  process_temp_data.py  process_watch_data.py
scripts/events/: manage_march_events.py
scripts/participants/: add_participants.py
src/app/: main.py
src/database/: README.md  schema.sql  utils.py
src/processing/: __init__.py  data_loader.py  data_merger.py  filters.py  parsers.py  squad_filler.py  step_processor.py  temp_processor.py  watch_processor.py
tests/: conftest.py
tests/integration/: test_navigation_callbacks.py
tests/unit/: test_auth.py  test_database.py  test_march_components.py
utils/: auth.py  database.py
utils/visualization/: march_charts.py  march_route_map.py
(+32 files in other folders)
